css/style.css
body {
    font-family: "Nanum Gothic", Helvetica, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
    font-family: "Nanum Gothic",sans-serif;;
    font-weight: bold;
}

/* Main page content headers */
.page-header {
    margin-top: 0;
}

@media (min-width: 768px) {
    .page-header h1 {
        margin-top: 0 !important;
    }
}

/* Main navigation */
/* - Position the Stratus logo in relation to the navbar-brand text */
.navbar-brand img {
    margin-top: -12px;
    margin-right: 8px;
    margin-bottom: -11px;
    float: left;
}

/* - Tweak navbar item hover and focus colors */
.navbar .navbar-nav > li:not(.active) > a:hover,
.navbar .navbar-nav > li:not(.active) > a:focus {
    background-color: #E5E5E5
}

/* Jumbotron */
/* - Reduce overall size of jumbotron subheads
   - Add a pattern background overlay to all sizes */
.jumbotron {
    position: relative;
    color: #fff;
    /*background: #450f43; */
    -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
       -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
            box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
}

.jumbotron .container {
    position: relative;
    z-index: 2;
}

.jumbotron:after {
    background: url("../img/grid-15px.png") repeat scroll center center transparent;
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    opacity: .8;
}

.jumbotron.error:after {
    background: url("../img/404.png") repeat scroll center center transparent;
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.jumbotron.subhead .lead {
    margin-bottom: 10px;
}
.jumbotron.subhead h1 .lead {
    display: inline-block;
    margin-bottom: 0px !important;
}
.jumbotron.subhead h1 {
    margin-top: 0;
}
.jumbotron.error h1 {
    color: #FFF
    text-shadow: 0 1px 10px rgba(0,0,0,.5), 0 0 30px rgba(0,0,0,.9);
}
.jumbotron.error.p {
    color: #FFF
    text-shadow: 0 1px 10px rgba(0,0,0,.5), 0 0 30px rgba(0,0,0,.9);
}

@media (min-width: 768px) {
    .jumbotron.subhead {
        padding: 30px 40px;
        padding-bottom: 20px;
    }
    .jumbotron.subhead h1 {
        font-size: 45px;
    }
    .jumbotron.subhead .lead {
        font-size: 20px;
    }

    .jumbotron.subhead h1 .lead {
        margin-left: 10px;
    }
}
@media (max-width: 767px) {
    .jumbotron.subhead {
        padding: 24px 30px;
        padding-bottom: 14px;
    }
    .jumbotron.subhead .lead {
        font-size: 18px;
    }

    .jumbotron.subhead h1 .lead {
        display: block;
        margin-left: none;
    }
}

/* Misc */
code {
   padding: 1px 4px;
}

td pre {
    margin-bottom: 0;
    display: inline-block;
    border: none;
    padding: 1px 0;
}

td pre code {
    margin: 0 4px;
    white-space: nowrap;
}

.right-ref-link {
    float: right;
    margin-left: 8px;
}
.left-ref-link {
    float: left;
    margin-right: 8px;
}


.docs-footer {
    margin-bottom: 20px;
}


/* Custom alert styles */
.alert.alert-small {
    padding: 5px 7px 4px 7px;
}

.alert .fa.fa-2x {
    margin: 5px;
    float: left;
}

.alert .alert-content {
    margin: 0px;
    padding-left: 48px;
}

.alert-success p a {
    color: #2b542c
}
.alert-info p a {
    color: #245269
}
.alert-warning p a {
    color: #66512c
}
.alert-danger p a {
    color: #843534
}


/* Sidebar navigation */
.subnav-btn {
    float: none !important;
}

.docs-nav-pills > ul > li > a,
.docs-nav-pills > li > a {
    position: relative;
    display: block;
    padding: 3px 10px;
}

.docs-nav-pills h4 {
    margin-top: 2px;
    margin-bottom: 2px;
    padding: 8px 0px;
}

/* Bottom border on tables */
.table-striped>tbody {
    border-bottom: 1px solid #ddd;
}

/* Custom dynamic button style */
/* - Currently used for collapsible example buttons
   - Title changes from "More Examples" to "Less Examples" and vs versa */
a.btn-more.collapsed:before {
    content: "더보기";
}

a.btn-more:before {
    content: "작게 보기 ";
}

/* Elements with this attribute will show a scrollbar if they overflow their parent */
.scroll {
    overflow: auto;
}

/* Changelog list styling */
ul.changelog {
    list-style: none;
    padding-left: 80px;
}

ul.changelog li {
    margin-bottom: 10px;
}

ul.changelog .label {
    margin-left: -80px;
    margin-top: 3px;
    float: left;
}

/* Make code boxes automatically scroll instead of wrapping when the screen is under this width */
@media screen and (max-width:767px) {
    pre {
        width: 100%;
        margin-bottom: 15px;
        overflow-x: auto;
        overflow-y: hidden;
        -webkit-overflow-scrolling: touch;
        -ms-overflow-style: -ms-autohiding-scrollbar;
    }

    pre code {
        width: 100%;
        max-width: 100%;
        overflow: auto;
        overflow-wrap: normal;
        white-space: pre;
    }
}


/* Material table styling */
#blocks #dataTable tr td.data {
    text-align: right;
}

/* Custom map thumbnail style */
.map-thumbnail {
    float: none;
    display: inline-block;
    width: 270px;
    text-align: left;
}

.map-image {
    width: 260px;
    height: 218px;
    margin: 0;
    background-color: #525252;
    background-size: 260px 218px;
}

.map-banner {
    height: 40px;
    background-color: rgba(255,255,255,0.7);
    padding-left: 6px;
    overflow: hidden;
}

.map-name {
    font-size: 14px;
    color: #000;
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
}

.map-gamemode {
    display: block;
    margin-top: -6px;
    font-size: 10px;
    color: #393939;
}

